Update install_minecraft.sh